[package]
name = "boston-housing"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.12"
rusty-machine = "0.5"
# tensorflow = "0.17"
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
rand = "0.8"
csv = "1"